chore(maven): allow maven to launch a debugging vm