@@ -1,5 +1,6 @@
-package org.iagl.debugging.programtrace;
+package org.iagl.debugging.programtrace.trace;
 
+import java.util.Arrays;
 import java.util.List;
 
 public enum TraceLevel {
@@ -9,7 +10,7 @@ public enum TraceLevel {
     CRITIQUE;
 
     public boolean isEqualOrSuperiorTo(TraceLevel logTraceLevel) {
-        final List<TraceLevel> traceLevelValues = List.of(TraceLevel.values());
+        final List<TraceLevel> traceLevelValues = Arrays.asList(TraceLevel.values());
         return traceLevelValues.indexOf(this) >= traceLevelValues.indexOf(logTraceLevel);
     }
 }
