@@ -1,4 +1,4 @@
-package org.iagl.debugging.programtrace;
+package org.iagl.debugging.programtrace.trace;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
@@ -7,6 +7,7 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.*;
@@ -15,7 +16,7 @@ class ProgramTraceTest {
     @Test
     void given_valid_file_should_create_program_trace(@TempDir Path tempDir) throws IOException {
         // ARRANGE
-        final List<String> traceLines = List.of(
+        final List<String> traceLines = Arrays.asList(
                 "2019-12-04T10:04:01.158468,CRITIQUE,someMethod,364",
                 "2019-12-05T17:10:01.158468,FAIBLE,someOtherMethod,abcd"
         );
